--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1 class="text-center my-5">Our Team</h1>
+    <p class="text-center my-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt recusandae unde delectus sequi natus alias? Voluptates iste velit, illo molestias sunt dicta, exercitationem sed doloribus aperiam vitae animi aspernatur quas.</p>
+    <div class="container cards row gap-5 justify-content-center">
+        
+    </div>
 </body>
 </html>
